# bevy_vbsp

./: Cargo.toml
.github/workflows/: ci.yaml
crates/bevy_bsp/: Cargo.toml
crates/bevy_bsp/assets/maps/css/: test.bsp
crates/bevy_bsp/assets/maps/revolution/: test.bsp
crates/bevy_bsp/examples/: view_map.rs
crates/bevy_bsp/src/: entities.rs  lib.rs  oldlib.rs
crates/bevy_bsp/src/entities/: info_player.rs
crates/bevy_vpk/: Cargo.toml
crates/bevy_vpk/src/: lib.rs  vmt.rs  vpk.rs  vtf.rs
crates/vmt-parser/: Cargo.toml  README.md  flake.nix
crates/vmt-parser/.forgejo/workflows/: ci.yaml
crates/vmt-parser/src/material/: mod.rs  modulate.rs  vertexlitgeneric.rs  worldtwotextureblend.rs
