[workspace]
members = ["crates/*"]
package.edition = "2024"
resolver = "3"


[workspace.dependencies]
bevy_vpk = { path = "crates/bevy_vpk" }

# Bevy
bevy = "0.18"
avian3d = "0.6.0-rc.0"
glam = "0.30"

# Valve
vmdl = "0.2"
vtf = "0.3.1"
vbsp = "0.9"
vpk = "0.3"
vdf-reader = "0.3.1"
vmt-parser = "0.2.0"

# Other
anyhow = "1.0"
async-fs = "2.0"
cfg-if = "1.0"
futures-io = "0.3"
image = "0.25"
tracing = "0.1"
pin-project = "1.0"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
# TODO: upstream changes
vmt-parser = { path = "crates/vmt-parser" }
# vtf = { path = "crates/vtf-rs" }

# Remove spurious validation errors
[profile.dev.package.wgpu-types]
debug-assertions = false
