[workspace]
members = ["crates/*"]
package.edition = "2024"
resolver = "3"


[workspace.dependencies]
bevy_vpk = { path = "crates/bevy_vpk" }

# Bevy
bevy = "0.18"
avian3d = "0.6.0-rc.0"
glam = "0.30"

# Valve
# NOTE: Using fork that removes unnecessary noisy log lines
vmdl = { git = "https://github.com/eira-fransham/vmdl.git" }
vtf = "0.3"
vbsp = { git = "https://codeberg.org/icewind/vbsp.git" }
vpk = "0.3"
vdf-reader = { git = "https://codeberg.org/icewind/vdf-reader.git" }
vmt-parser = { path = "crates/vmt-parser" }
# TODO: Some internals need to be exposed, so we have a vendored fork
# vmt-parser = { git = "https://codeberg.org/icewind/vmt-parser.git" }

# Other
anyhow = "1.0"
async-fs = "2.0"
cfg-if = "1.0"
clap = "4.5"
futures-io = "0.3"
image = "0.25"
itertools = "0.14"
tracing = "0.1"
pin-project = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Remove spurious validation errors
[profile.dev.package.wgpu-types]
debug-assertions = false
