[package]
name = "bevy_bsp"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[features]
dev = ["glam/debug-glam-assert", "bevy/debug"]

[dependencies]
avian3d.workspace = true
bevy.workspace = true
bevy_vpk.workspace = true

anyhow.workspace = true
async-fs.workspace = true
astcenc-rs.workspace = true
futures-io.workspace = true
image.workspace = true
itertools.workspace = true
glam.workspace = true
pin-project.workspace = true
serde.workspace = true
tracing.workspace = true

vmdl.workspace = true
vbsp.workspace = true
vdf-reader.workspace = true
vpk.workspace = true
vtf.workspace = true
vmt-parser.workspace = true
qbsp.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
itertools.workspace = true
